--- a/templates/tags.html
+++ b/templates/tags.html
@@ -29,6 +29,7 @@
             <div class="form-group">
               <label for="name">名称</label>
               <input id="name" name="name" type="text" class="form-control required" placeholder="标签名称" autocomplete="off">
+              <input name="code" type="hidden" value="{{code}}">
             </div>
             <div class="form-group">
               <label for="sortOrder">排序</label>
